# cmatrix-agentic-red-team

./:  llm-upgrade-plan.md  .dockerignore  .env.example  .gitignore  AGENTIC_IMPLEMENTATION_ROADMAP.md  DEPLOYMENT.md  Makefile  README.md  TUNNELING.md  USER_MANUAL.md  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml  docker.sh  fix_dependencies.sh  hackathon-project-idea.md  health_check.sh  install.sh  llm_config_sample.json  package-lock.json  package.json  publish_images.sh  test_knowledge_base.sh  test_llm_api.sh  test_llm_providers.py  test_memory_demo.sh  verify_checkpoint.sh
app-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.optimized  Dockerfile.split  Makefile  README.md  alembic.ini  pyproject.toml  requirements.base.txt  requirements.project.txt  requirements.txt  warmup_models.py
app-backend/app/: main.py  worker.py
app-backend/app/agents/: __init__.py  registry.py
app-backend/app/agents/base/: __init__.py  agent.py  state.py
app-backend/app/agents/specialized/: api_security_agent.py  auth_agent.py  command_agent.py  config_agent.py  network_agent.py  vuln_intel_agent.py  web_agent.py
app-backend/app/api/: deps.py
app-backend/app/api/v1/: router.py
app-backend/app/core/: approval_config.py  config.py  database.py  logging.py  security.py
app-backend/app/models/: __init__.py  approval_log.py  auth.py  background_job.py  chat.py  conversation.py  conversation_schemas.py  llm.py  responses.py  system_settings.py  user.py
app-backend/app/services/: __init__.py  auth.py  checkpoint.py  command_executor.py  nvd.py  orchestrator.py  supervisor.py  vector_store.py
app-backend/app/services/llm/: __init__.py  api_provider_service.py  config_profile_service.py  db_factory.py  pool.py
app-backend/app/services/optimization/: __init__.py  backpressure.py  integration.py  semantic_cache.py  token_optimizer.py
app-backend/app/services/rag/: __init__.py  ab_testing.py  cve_graph.py  cve_reranker.py  cve_search.py  cve_vector_store.py  nvd_sync_service.py  query_reformulator.py  self_correction.py
app-backend/app/services/reasoning/: __init__.py  reflection.py  rewoo.py  tree_of_thoughts.py
app-backend/app/tasks/: __init__.py
app-backend/app/tests/: test_supervisor.py
app-backend/app/tests/agents/: test_auth_config_agents.py  test_subgraphs.py
app-backend/app/tests/test_rag/: test_cve_graph.py  test_cve_reranker.py  test_cve_vector_store.py  test_query_reformulator.py  test_self_correction.py
app-backend/app/tests/test_reasoning/: test_reflection.py  test_rewoo.py  test_tree_of_thoughts.py
app-backend/app/tools/: authentication_security.py  execution.py  memory.py  network_tools.py  registry.py  web_security.py
app-backend/app/utils/: __init__.py  audit_logger.py  helpers.py
app-backend/data/: auth_config.json
app-backend/migrations/versions/: 79d75099c35b_add_approval_logs_table.py  add_system_settings.py  f15f0c2abf51_initial_schema.py
app-backend/scripts/: dev.sh  run_migration.sh  start.sh  sync_nvd.py
app-backend/tests/: test_approval_gates.py  test_background_jobs.py  test_optimization.py  test_optimization_integration.py
app-backend/tests/api/: test_health.py
app-backend/tests/load/: locustfile.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  demos.json  init_knowledge_base.py  llm.py  migrate_embeddings.py  migrate_to_bge_base.py  network_tools.py  orchestrator.py  pyproject.toml  requirements.base.txt  requirements.txt  setup.sh  test_auto_injection_fix.py  test_checkpoint.py  test_simple_fix.py  test_user_perspective.py  test_vector_comprehensive.py  test_vector_db_upgrade.py  test_vector_store.py  test_vector_store_direct.py  tools.py  utils.py  verify_checkpoint_simple.py  verify_task_1_2.py  warmup_models.py
backend/agents/: network_agent.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/specialized/: api_security_agent.py  auth_agent.py  command_agent.py  config_agent.py  network_agent.py  vuln_intel_agent.py  web_agent.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/core/: __init__.py  approval_config.py  config.py  database.py  logging.py  security.py
backend/app/examples/: demo_supervisor.py
backend/app/models/: __init__.py  approval_log.py  auth.py  chat.py  conversation.py  conversation_schemas.py  llm.py  responses.py  system_settings.py  user.py
backend/app/services/: __init__.py  auth.py  checkpoint.py  command_executor.py  llm.py  nvd.py  orchestrator.py  supervisor.py  vector_store.py
backend/app/services/llm/: __init__.py  api_provider_service.py  config_manager.py  config_profile_service.py  db_factory.py  factory.py  llm_service.py
backend/app/services/optimization/: __init__.py  backpressure.py  integration.py  semantic_cache.py  token_optimizer.py
backend/app/services/rag/: __init__.py  ab_testing.py  cve_reranker.py  cve_search.py  query_reformulator.py  self_correction.py
backend/app/services/reasoning/: __init__.py  reflection.py  rewoo.py  tree_of_thoughts.py
backend/app/tasks/: __init__.py
backend/app/tests/: test_supervisor.py
backend/app/tests/test_rag/: __init__.py  (+3 more)
backend/app/tools/: __init__.py  authentication_security.py  execution.py  memory.py  network_tools.py  registry.py  web_security.py
backend/app/utils/: __init__.py  audit_logger.py  helpers.py
backend/audit_logs/: audit_20251119.jsonl
backend/data/: auth_config.json  demos.json
backend/migrations/: 001_add_conversations.sql  002_add_llm_models.sql  003_configuration_profiles.sql  env.py  fix_duplicate_active_profiles.sql
backend/migrations/versions/: 79d75099c35b_add_approval_logs_table.py  add_system_settings.py  f15f0c2abf51_initial_schema.py
backend/scripts/: dev.sh  run_migration.sh
backend/tests/: test_approval_gates.py  test_optimization.py  test_optimization_integration.py
backend/tests/api/: test_health.py
backend/tests/load/: locustfile.py
(+302 files in other folders)
