[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmatrix-backend"
version = "1.0.0"
description = "DeepHat Agent API - AI-powered cybersecurity agent system"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Kindo.ai", email = "info@kindo.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "langchain==0.3.7",
    "langchain-core==0.3.15",
    "langgraph==0.2.45",
    "requests==2.32.3",
    "httpx==0.27.2",
    "python-nmap==0.7.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "loguru==0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

# Ruff - Modern linting and formatting (replaces black, flake8, isort)
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), flake8-bugbear (B),
# flake8-comprehensions (C4), pyupgrade (UP), flake8-unused-arguments (ARG),
# flake8-simplify (SIM), flake8-async (ASYNC)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends)
    "UP007", # Use `X | Y` for type annotations
    "E722",  # Do not use bare `except`
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "PTH",   # Use pathlib instead of os.path
    "E402",  # Module level import not at top of file
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err`
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM108", # Use ternary operator
    "B007",  # Loop control variable not used
    "F841",  # Local variable assigned but never used
    "E712",  # Avoid equality comparisons to True
    "F401",  # Unused imports
    "UP035", # Deprecated typing aliases (Dict, List)
    "SIM117", # Nested with statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# mypy - Static type checking
[tool.mypy]
python_version = "3.9"
strict_equality = false
warn_unreachable = false
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
implicit_optional = true
disable_error_code = [
    "var-annotated",
    "arg-type",
    "no-any-return",
    "assignment",
    "call-overload",
    "import-untyped",
    "union-attr",
    "index",
    "attr-defined",
    "misc",
    "valid-type",
    "unreachable",
    "return-value",
    "abstract",
    "import-not-found"
]

# Third-party libraries without type stubs
# ignore_missing_imports = true # Already defined above

# Per-module overrides for stricter checking in new code
[[tool.mypy.overrides]]
module = "app.api.*"
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Bandit - Security linter
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "migrations"]
skips = ["B101", "B601"]  # Skip assert_used and shell injection (handled by code review)
